# Zarith

./: .azure-pipelines.sh  TODO.md  azure-pipelines.yml  dune  dune-project  zarith-freestanding.opam  zarith-virtual.opam  zarith-xen.opam  zarith.opam
config/: discover.ml  dune  flags.sh  get_arch.ml
src/: dune.inc  z_pp.ml
src/impl-freestanding/: dune
src/impl-unix/: dune
src/impl-xen/: dune
src/zarith/: dune
src/zarith-virtual/: dune
