(library
  (name zarith)
  (public_name zarith)
  (modules z q big_int_Z)
  (c_library_flags (:include config/ldflags.sxp))
  (self_build_stubs_archive (zarith_c))
  (wrapped false))

(rule
 (targets libzarith_c_stubs.a)
 (deps   caml_z_x86_64.o caml_z.o)
 (action (run ar rcs %{targets} %{deps})))

(rule
 (targets dllzarith_c_stubs.so)
 (deps   caml_z_x86_64.o caml_z.o)
 (action (run %{cc} -shared -o %{targets} %{deps})))

(executable
 (name z_pp)
 (modules z_pp)
 (libraries str))

(rule
  (targets z.ml z.mli z_features.h)
  (deps (:script z_pp.exe) z_pp.ml z.mlp z.mlip META caml_z_x86_64.S)
  (action (run %{script} -ov %{ocaml_version} x86_64)))

(rule
  (targets caml_z_x86_64.o)
  (deps (:s caml_z_x86_64.S) zarith.h)
  (action (run %{cc} %{read-lines:config/asflags} -c %{s} -o %{targets})))

(rule
  (targets caml_z.o)
  (deps (:c caml_z.c) zarith.h z_features.h)
  (action (run %{cc} %{read-lines:config/cflags} -c %{c} -o %{targets})))
