(library
  (name zarith_freestanding)
  (public_name zarith.freestanding)
  (libraries ocaml-freestanding)
  (c_library_flags (:include ../../config/freestanding-ldflags.sxp))
  (self_build_stubs_archive (zarith_freestanding_c))
  (modules z q big_int_Z)
  (no_dynlink)
  (optional)
  (implements zarith)
  (variant freestanding))

(rule
 (targets libzarith_freestanding_c_stubs.a)
 (deps   caml_z_arch.o caml_z.o)
 (action (run ar rcs %{targets} %{deps})))

(rule
  (targets caml_z_arch.o)
  (deps (:s caml_z_arch.S) zarith.h)
  (action (run %{cc} %{read-lines:../../config/freestanding-asflags} -c %{s} -o %{targets})))

(rule
  (targets caml_z.o)
  (deps (:c caml_z.c) zarith.h z_features.h)
  (action (run %{cc} %{read-lines:../../config/freestanding-cflags} -c %{c} -o %{targets})))

(include ../dune.inc)
